--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,74 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    # =========================
+    # 🚀 PERFORMANCE (DART)
+    # =========================
+
+    prefer_const_constructors: true
+    prefer_const_constructors_in_immutables: true
+    prefer_const_literals_to_create_immutables: true
+
+    avoid_unnecessary_containers: true
+    sized_box_for_whitespace: true
+
+    avoid_function_literals_in_foreach_calls: true
+    avoid_redundant_argument_values: true
+    avoid_bool_literals_in_conditional_expressions: true
+
+    prefer_final_locals: true
+    prefer_final_fields: true
+
+    unnecessary_lambdas: true
+    unnecessary_parenthesis: true
+    unnecessary_new: true
+    unnecessary_this: true
+
+    # =========================
+    # 🔁 REBUILDS / WIDGET TREE
+    # =========================
+
+    use_key_in_widget_constructors: true
+    use_super_parameters: true
+
+    avoid_positional_boolean_parameters: true
+
+    # =========================
+    # 🧠 MEMÓRIA / GC
+    # =========================
+
+    avoid_dynamic_calls: true
+    avoid_types_on_closure_parameters: true
+
+    prefer_collection_literals: true
+    prefer_spread_collections: true
+
+    # =========================
+    # 📦 ASYNC / STREAMS
+    # =========================
+
+    avoid_returning_null_for_future: true
+    avoid_void_async: true
+    unawaited_futures: true
+
+    # =========================
+    # 🧹 CÓDIGO LIMPO (impacta performance indiretamente)
+    # =========================
+
+    avoid_empty_else: true
+    avoid_multiple_declarations_per_line: true
+    avoid_relative_lib_imports: true
+
+    require_trailing_commas: true
+
+    sort_child_properties_last: true
+    sort_constructors_first: true
+
+    # =========================
+    # 🧱 WIDGETS / FLUTTER
+    # =========================
+
+    avoid_print: true
+    use_build_context_synchronously: true
