--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^3.2.0
   flutter_hooks: ^0.21.3+1
   hooks_riverpod: ^3.2.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
